# Alm

./: README.md  activity.cpp
Alm_cpp/: Alm_interpol.cpp  Alm_interpol.h  CMakeLists.txt  README.md  activity.h  bilinear_interpol.cpp  bilinear_interpol.h  data.h  main.cpp.bak  version.h
Alm_cpp/tests/: CMakeLists.txt  computation_time_tests.cpp  unit_tests.cpp
